--- a/FileNameConverter/MainWindow.xaml
+++ b/FileNameConverter/MainWindow.xaml
@@ -6,9 +6,15 @@
         xmlns:local="clr-namespace:FileNameConverter"
         mc:Ignorable="d"
         ResizeMode="NoResize"
-        Title="CLEVI-File Name Converter" Height="355" Width="500">
-    <Grid>
-        <Grid Margin="0,0,0,123" Background="#FFE6E4E4">
+        Title="CLEVI" Height="355" Width="500" WindowStartupLocation="CenterScreen">
+    <Grid Background="#FFF9DDDD">
+        <Frame Source="Views/MenuPage.xaml">
+        </Frame>
+           
+        
+        <!--<Frame Source="Views/FileSetting.xaml">
+        </Frame>-->
+        <!--<Grid Margin="0,0,0,123" Background="#FFE6E4E4">
             <StackPanel Background="#FFE6E4E4" Orientation="Horizontal" Height="26" VerticalAlignment="Top" Margin="0,0,2,0" HorizontalAlignment="Right" Width="258">
                 <Button Width="80" Margin="0 0 10 0" Content="폴더 설정" Background="#FFF3B58A"></Button>
                 <Button Width="80" Margin="0 0 10 0" Content="제목 설정" Background="#FFF3B58A"></Button>
@@ -35,7 +41,7 @@
 
         <Label Content="폴더 생성 수" FontSize="15" HorizontalAlignment="Left" Margin="267,222,0,0" VerticalAlignment="Top" Width="96"/>
         <TextBox x:Name="tbxInputFolderAmount" Margin="380,218,0,0" FontSize="15"
-                 TextWrapping="Wrap" Text="" TextChanged="tbxInputFolderAmount_TextChanged" HorizontalAlignment="Left" Width="85" Height="38" VerticalAlignment="Top"/>
+                 TextWrapping="Wrap" Text="" TextChanged="tbxInputFolderAmount_TextChanged" HorizontalAlignment="Left" Width="85" Height="38" VerticalAlignment="Top"/>-->
 
 
     </Grid>
